...
            child: Column(
              mainAxisAlignment: MainAxisAlignment.start,
              crossAxisAlignment: CrossAxisAlignment.start,
              children: <Widget>[
                Semantics(
                  container: true,
                  identifier: 'port_protocol_dropdown',
                  child: DropdownButton<String>(
                      value: _selectedProtocol,
                      items: const [
                        DropdownMenuItem(value: "tcp", child: Text("TCP")),
                        DropdownMenuItem(value: "udp", child: Text("UDP")),
                      ],
                      onChanged: (String? value) {
                        setState(() {
                          _selectedProtocol = value ?? "tcp";
                        });
                        if (_timer != null) {
...
              ],
            ),
          ),
        ),
        floatingActionButton: Semantics(
          container: true,
          identifier: 'port_fab',
          child: FloatingActionButton(
            onPressed: () {
              if (_timer != null) {
                _stop();
              } else {
                _start();
...
