...
              children: <Widget>[
                Row(
                  children: [
                    Expanded(child: Text("${loc.showProcessMode}:${_sortCPU ? 'CPU' : 'Mem'}")),
                    Semantics(
                      container: true,
                      identifier: 'process_sort_switch',
                      child: Switch(
                        value: _sortCPU,
                        onChanged: (bool value) {
                          setState(() {
                            _sortCPU = value;
                          });
...
              ],
            ),
          ),
        ),
        floatingActionButton: Semantics(
          container: true,
          identifier: 'processes_fab',
          child: FloatingActionButton(
            onPressed: () {
              if (_timer != null) {
                _stop();
              } else {
                _start();
...
