...
                _errorMsg,
                style: const TextStyle(fontSize: 12, color: Colors.red),
              ),
              SingleChildScrollView(
                  scrollDirection: Axis.horizontal,
                  child: Semantics(
                    identifier: "search_results_table",
                    child: DataTable(
                      headingRowHeight: 20,
                      dataRowMinHeight: 10,
                      dataRowMaxHeight: 18,
                      columns: [
                        DataColumn(label: Text(loc!.key)),
...
        child: Form(
          child: Column(
            mainAxisAlignment: MainAxisAlignment.start,
            crossAxisAlignment: CrossAxisAlignment.center,
            children: <Widget>[
              Semantics(
                identifier: "search_dns_target_input",
                child: TextFormField(
                  initialValue: _dnsTarget,
                  autocorrect: false,
                  enableSuggestions: false,
                  keyboardType: TextInputType.url,
                  validator: (value) {
...
        child: Form(
          child: Column(
            mainAxisAlignment: MainAxisAlignment.start,
            crossAxisAlignment: CrossAxisAlignment.center,
            children: <Widget>[
              Semantics(
                identifier: "search_mac_address_input",
                child: TextFormField(
                  initialValue: _macAddress,
                  autocorrect: false,
                  enableSuggestions: false,
                  keyboardType: TextInputType.visiblePassword,
                  validator: (value) {
...
        child: Form(
          child: Column(
            mainAxisAlignment: MainAxisAlignment.start,
            crossAxisAlignment: CrossAxisAlignment.center,
            children: <Widget>[
              Semantics(
                identifier: "search_port_number_input",
                child: TextFormField(
                  initialValue: _portNumber,
                  autocorrect: false,
                  enableSuggestions: false,
                  keyboardType: const TextInputType.numberWithOptions(decimal: true),
                  validator: (value) {
...
                identifier: "search_tab_myip",
                child: const Text("My IP", style: TextStyle(fontSize: 12)),
              ),
            ),
            Tab(
              child: Semantics(
                identifier: "search_tab_dns",
                child: const Text("DNS", style: TextStyle(fontSize: 12)),
              ),
            ),
            Tab(
              child: Semantics(
                identifier: "search_tab_mac",
                child: const Text("MAC", style: TextStyle(fontSize: 12)),
              ),
            ),
            Tab(
              child: Semantics(
                identifier: "search_tab_port",
                child: const Text("Port", style: TextStyle(fontSize: 12)),
              ),
            ),
            Tab(
              child: Semantics(
                identifier: "search_tab_mib",
                child: const Text("MIB", style: TextStyle(fontSize: 12)),
              ),
            ),
          ],
          onTap: (v) {
            setState(() {
...
          _mibTreeView(),
        ],
      ),
      floatingActionButton: _tabController?.index == 4
          ? null
          : Semantics(
              identifier: "search_fab",
              child: FloatingActionButton(
                onPressed: () {
                  _search();
                },
                child: _process ? const Icon(Icons.stop, color: Colors.red) : const Icon(Icons.play_circle),
              ),
...
