appId: jp.co.twise.twsnmpfm
---
- launchApp:
    clearState: true
- startRecording: maestro/demo/record/processes
- runFlow:
    file: ../subflow/setup_ok_node.yaml
- tapOn:
    id: "node_menu_button_0"
- waitForAnimationToEnd
- tapOn:
    id: "node_menu_item_process"
- extendedWaitUntil:
    visible:
      id: "processes_fab"
    timeout: 10000
- tapOn:
    id: "process_sort_switch"
- tapOn:
    id: "processes_fab"
- waitForAnimationToEnd
- tapOn:
    id: "processes_fab"
- extendedWaitUntil:
    visible:
      id: "this_id_does_not_exist"
    timeout: 5000
    optional: true
- stopRecording
