appId: jp.co.twise.twsnmpfm
---
- launchApp:
    clearState: true
- startRecording: maestro/demo/record/server_test
- runFlow:
    file: ../subflow/setup_ok_node.yaml
- tapOn:
    id: "node_menu_button_0"
- waitForAnimationToEnd
- tapOn:
    id: "node_menu_item_server"
- extendedWaitUntil:
    visible:
      id: "server_test_fab"
    timeout: 10000
- tapOn: "syslog.*"
- tapOn: "Trap.*"
- tapOn: "Mail.*"
- tapOn: "NTP.*"
- stopRecording
