appId: jp.co.twise.twsnmpfm
---
- launchApp:
    clearState: true
- runFlow:
    file: subflow/setup_ok_node.yaml
- tapOn:
    id: "node_menu_button_0"
- waitForAnimationToEnd
- tapOn:
    id: "node_menu_item_server"
- extendedWaitUntil:
    visible:
      id: "server_test_fab"
    timeout: 10000
- tapOn:
    id: "ntp_target_autocomplete"
- eraseText
- inputText: "pool.ntp.org"
- tapOn: "pool.ntp.org"
- runFlow:
    when:
      platform: Android
    commands:
      - hideKeyboard
- tapOn:
    id: "server_test_fab"
- waitForAnimationToEnd
- tapOn:
    id: "server_test_fab" # Stop
